.argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cocoroiki-ingress
  namespace: cocoroiki
spec:
  ingressClassName: nginx
  rules:
    - host: cocoroiki-bff.yumekiti.net
      http:
        paths:
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: cocoroiki-cms
                port:
                  number: 1337
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cocoroiki-bff
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cocoroiki-strapi-ingress
  namespace: cocoroiki
spec:
  ingressClassName: nginx
  rules:
  - host: cocoroiki-strapi.yumekiti.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cocoroiki-cms
            port:
              number: 1337
